resources/css/style.css
body{
  font-family: Helvetica;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity: 0.9;
  text-align: center;
}

a{
  text-decoration: underline;
  padding-left:20px;
  color: seashell;
}

h2, h3, h4, h5{
  display: block;
  font-weight: bold;
}

header{
  display: inline-block;
  position: fixed;
  width: 100%;
  height: 69px;
  border-bottom: 1px solid seashell;
  display: flex;
  flex-direction: row;
  align-items: center;
  z-index: 1;
  top: 0;
  background-color: black
}

.logo{
    width: 70%;
}

.logo img{
  left: 10px;
  height: 50px;
}

.navigation{
  display: inline-flex;
}

.flexcenter{
  display: flex;
  justify-content: center;
  width: 100%;
}

.mission{
  height: 700px;
  padding-top: 70px;
}

.missioncontent{
  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  width: 1200px;
}

.missionconentbackground{
  background-color: black;
  height: 110px;
}

.missionconentbackground h2{
    margin-top: 300px;
}

.featured{
  display: flex;
  justify-content: center;
}

.monthtext{
  width: 1000px;
  padding-top: 30px;
}

.teapics{
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.pics img{
  height: 200px;
  width: 300px;
  display: block;
  padding: 20px;
}

.pics h4{
  margin-top: 10px;
}

.locations{
  height: 500px;
  width: 100%;
  padding-top: 50px;
  padding-bottom: 0;
}

.locscontent{
  width: 1200px;
  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  padding-top: 50px;
}

.locs{
  background-color: black;
  margin: 0 20px;
  width: 300px;
  display: inline-block;
  opacity: 1;
}

#footinfo{
  height: 200px;
  flex-direction: column;
  top: 0;
}

#footinfo h5{
    margin: 10px;
  }

#copy{
  text-align: left;
}

